добавленно сохранение после закрытия

--- a/App.config
+++ b/App.config
@@ -5,13 +5,14 @@
             <section name="LogixForms.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    <connectionStrings />
     <userSettings>
         <LogixForms.Properties.Settings>
             <setting name="W" serializeAs="String">
-                <value>0</value>
+                <value>1000</value>
             </setting>
             <setting name="H" serializeAs="String">
-                <value>0</value>
+                <value>500</value>
             </setting>
         </LogixForms.Properties.Settings>
     </userSettings>
