--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -6,10 +6,13 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="W" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">1000</Value>
     </Setting>
     <Setting Name="H" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">500</Value>
+    </Setting>
+	<Setting Name="MyTab" Type="System.Windows.Forms.MyTabControl" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
