Добавлена таблица адресов

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="LogixForms.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="Adres" Type="System.Collections.Specialized.StringCollection" Scope="User">
+    <Setting Name="Adres" Type="System.Collections.Generic.Dictionary" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="W" Type="System.Int32" Scope="User">
