--- a/App.config
+++ b/App.config
@@ -14,6 +14,15 @@
             <setting name="H" serializeAs="String">
                 <value>500</value>
             </setting>
+            <setting name="AdresName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AdresValue" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AdresLen" serializeAs="String">
+                <value />
+            </setting>
         </LogixForms.Properties.Settings>
     </userSettings>
 </configuration>
