--- a/LogixForms.csproj
+++ b/LogixForms.csproj
@@ -6,11 +6,12 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Version>0.9.20</Version>
+    <Version>0.9.23</Version>
     <PackageIcon></PackageIcon>
     <UseWPF>False</UseWPF>
     <ApplicationIcon>XIO.ico</ApplicationIcon>
     <StartupObject></StartupObject>
+    <AssemblyName>Logix Reader</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
