Добавлен запрос на конфигурацию Загрузка и выгрузка адресов и имен

--- a/App.config
+++ b/App.config
@@ -23,6 +23,12 @@
             <setting name="AdresLen" serializeAs="String">
                 <value />
             </setting>
+            <setting name="RangAdr" serializeAs="String">
+                <value>8000</value>
+            </setting>
+            <setting name="CfgAdr" serializeAs="String">
+                <value>1000</value>
+            </setting>
         </LogixForms.Properties.Settings>
     </userSettings>
 </configuration>
