Перегрупировка решения + переход на .NET 8 Добавлена настройка шрифта больших элементов Добавлена настройка шрифта и цвета тегов и коментариев

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -23,5 +23,17 @@
     <Setting Name="CfgAdr" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1000</Value>
     </Setting>
+    <Setting Name="FontStyle" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Arial</Value>
+    </Setting>
+    <Setting Name="FontSize" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="CollorTag" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="CollorCom" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
