--- a/App.config
+++ b/App.config
@@ -29,6 +29,18 @@
             <setting name="CfgAdr" serializeAs="String">
                 <value>1000</value>
             </setting>
+            <setting name="FontStyle" serializeAs="String">
+                <value>Arial</value>
+            </setting>
+            <setting name="FontSize" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="CollorTag" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CollorCom" serializeAs="String">
+                <value />
+            </setting>
         </LogixForms.Properties.Settings>
     </userSettings>
 </configuration>
