Добавлена консольная команда для запроса конфигурации устройства по HTTP; Настроен нарделитель основной части и консоли. Теперь оносохраняется после закытия приложеия; Добавленна кнопка скрытия/показа консоли; удален progressBar(ранее названый TaskBar)

--- a/App.config
+++ b/App.config
@@ -41,6 +41,12 @@
             <setting name="CollorCom" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ConsoleH" serializeAs="String">
+                <value>250</value>
+            </setting>
+            <setting name="ConsoleCollapsed" serializeAs="String">
+                <value>True</value>
+            </setting>
         </LogixForms.Properties.Settings>
     </userSettings>
 </configuration>
